fix: add border to logo in header component for better visibility

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -45,6 +45,7 @@
   border-radius: 50%;
   height: 75px;
 
+  border: 1px solid transparent;
   &.scrolled {
     background-color: $color-button-bg;
     color: $color-white;
